# swaptrade-contract

./: DYNAMIC_FEE_ADJUSTMENT_IMPLEMENTATION.md
market-data-streaming/: Cargo.toml
market-data-streaming/src/: compression.rs  connection.rs  data_sources.rs  error.rs  historical.rs  lib.rs  orderbook.rs  rate_limiter.rs  types.rs  validation.rs  websocket.rs
swaptrade-contracts/bounty/src/: payout.rs  review.rs  storage.rs  submission.rs
swaptrade-contracts/counter/benches/: dynamic_fee_adjustment_bench.rs
swaptrade-contracts/counter/src/: alert_tests.rs  alerts.rs  analytics.rs  analytics_tests.rs  dashboard_tests.rs  dynamic_fee_adjustment.rs  dynamic_fee_adjustment_tests.rs  emergency_override.rs  events.rs  fee_adjustment_manager.rs  fee_history.rs  fuzz_tests.rs  lib.rs  liquidity_pool.rs  lp_tests.rs  network_congestion.rs  nft_errors.rs  nft_events.rs  nft_fractional.rs  nft_lending.rs  nft_lending_tests.rs  nft_marketplace.rs  nft_minting.rs  nft_storage.rs  nft_types.rs  oracle.rs  private_transaction.rs  rate_limit.rs  rate_limit_tests.rs  storage.rs  zkp_circuits.rs  zkp_errors.rs  zkp_proof_generation.rs  zkp_tests.rs  zkp_types.rs  zkp_verification.rs
swaptrade-contracts/counter/tests/: dynamic_fee_integration_test.rs  security_validation_tests.rs
swaptrade-contracts/credit-waitlist/src/: lib.rs  onboarding.rs  queue.rs
swaptrade-contracts/referral/src/: commission.rs  payout.rs  referral.rs
swaptrade-contracts/waitlist/src/: admin.rs  lib.rs  storage.rs  waitlist.rs
