[package]
name = "market-data-streaming"
version = "0.1.0"
edition = "2021"
authors = ["SwapTrade Team"]
description = "High-performance real-time market data streaming system"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
lz4 = "1.24"
zstd = "0.13"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
crossbeam = "0.8"
async-trait = "0.1"
governor = "0.6"
tower = "0.4"
hyper = { version = "1.0", features = ["full"] }
bytes = "1.5"
prost = "0.12"
crc = "3.0"
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[benchmarks]
name = "market_data_bench"
harness = false

[[bin]]
name = "market-server"
path = "src/bin/server.rs"

[[bin]]
name = "performance-test"
path = "src/bin/performance_test.rs"
